deploy : netlify 배포

--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://ksy8230.github.io/react-habbit-tracker/"
 }
